--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
+    "framer-motion": "^12.12.1",
     "lodash": "^4.17.21",
     "rc-slider": "^11.1.8",
     "react": "^19.1.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
